# AutoGenie

./: Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/cars/: cars_catalog.json
data/rag/: auto_finance_basics.md  new_paasenger_cars_market_overview.md
data/vectorstore/: chroma.sqlite3
frontend/: app.py
modules/: __init__  config.py  llm.py  models.py  rag.py
modules/agents/: graph.py
modules/api/: server.py
modules/services/: car_service.py  finance_service.py
