[project]
name = "my-auto-genie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "chromadb>=1.5.2",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "streamlit>=1.55.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]
